# rustls_testing

./: Cargo.toml  README.md  converted.pem  playserver_openssl2.pfx  privatekey.pem
benches/: rustls_benchmarks.rs
examples/: Cargo.toml
examples/src/: lib.rs
rustls/: Cargo.toml
rustls/benches/: benchmarks.rs
rustls/src/: lib.rs  tlsclient_mio.rs
src/: lib.rs  main.rs  tlsclient_mio.rs  tlsserver_mio.rs
